--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,24 @@
 #flac
-gtts
-SpeechRecognition
-pygame
-python-dotenv
+#gtts
+#SpeechRecognition
+#pygame
+#python-dotenv
 #portaudio19-dev
-pyaudio
-tinytuya
+#pyaudio
+#tinytuya
+#openai
+#sounddevice
+#openai-whisper
+#rapidfuzz
+#requests
+#apscheduler
+#dateparser
+#pyttsx3
+
+
 openai
-sounddevice
-openai-whisper
-rapidfuzz
+python-dotenv
+pyttsx3
+SpeechRecognition
+pyaudio
 requests
-apscheduler
-dateparser
