--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,8 @@
-#flac
-#gtts
-#SpeechRecognition
-#pygame
-#python-dotenv
-#portaudio19-dev
-#pyaudio
-#tinytuya
-#openai
-#sounddevice
-#openai-whisper
-#rapidfuzz
-#requests
-#apscheduler
-#dateparser
-#pyttsx3
-
-
 openai
 python-dotenv
 pyttsx3
 SpeechRecognition
 pyaudio
 requests
+pvporcupine
+
